add country count endpoint
